--- a/FPTBookWebClient/Areas/Owners/Views/OrderDetail/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/OrderDetail/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="pt-2 mb-2">
 	<h1 class="text-center mb-4">Orders Detail List</h1>
 	@{
-		int count = 1;
+		int count = 0;
 	}
 	<table id="example" class="table table-striped" style="width:100%">
 		<thead>
@@ -36,8 +36,9 @@
 			{
 				decimal PriceSale = orderDetail.Book.BookPrice - (orderDetail.Book.BookPrice * ((decimal)orderDetail.Book.SalePercent / 100m));
 				var amount = orderDetail.Quantity * PriceSale;
+				count++;
 				<tr>
-					<td>@{count++;}</td>
+					<td>@count</td>
 					<td>@orderDetail.Book.BookTitle</td>
 					<td>@orderDetail.Book.BookPrice.ToString("N2")</td>
 					<td>@orderDetail.Quantity</td>
