--- a/FPTBookWebClient/Areas/Owners/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 		<section class="row">
 			<div class="col-lg-2 col-md-3 content-left pr-0">
 				<!-- Navbar -->
-				<nav class="navbar navbar-expand-md bg-light navbar-light">
+				<nav class="navbar navbar-expand-md bg-light navbar-light justify-content-center">
 					<!-- Toggle button -->
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebarMenu">
 						<span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
 
 					<!-- Brand -->
 					<a class="nav-link px-0 text-info" asp-area="Owners" asp-controller="Statistic" asp-action="Index">
-						<h3 class="fw-bold">Owner</h3>
+						<h3 class="fw-bold">Store Owner</h3>
 					</a>
 				</nav>
 				<!-- Navbar -->
