--- a/FPTBookWebClient/Areas/Admins/Views/Member/Index.cshtml
+++ b/FPTBookWebClient/Areas/Admins/Views/Member/Index.cshtml
@@ -1,60 +1,52 @@
 ﻿@model IEnumerable<BusinessObjects.AppUser>
 @{
-    ViewData["Title"] = "Member Management";
+	ViewData["Title"] = "Member Management";
 }
 <div class="pt-2 mb-2">
-    <h1 class="text-center">Member Management</h1>
-    <div class="text-center mb-2 row">
-        <div class="col-6 d-flex justify-content-start align-items-center">
-            <a asp-area="Admins" asp-controller="Member" asp-action="Create" class="btn btn-outline-info">
-                <i class="bi bi-plus-circle"></i>
-                Add
-            </a>
-        </div>
-        <div class="col-6 d-flex justify-content-end align-items-center">
-            <form action="/manage/category" method="GET" class="d-flex input-group w-auto">
-                <input name="search" type="search" class="form-control" placeholder="Search by name"
-                       aria-label="Search" aria-describedby="search-addon" />
-                <button class="btn btn-secondary searching" type="submit">
-                    <i class="bi bi-search"></i>
-                </button>
-            </form>
-        </div>
-    </div>
-    <table id="tablecategory" class="table table-striped table-bordered m-0" cellspacing="0"
-           width="100%">
-        <thead class="justify-content-md-between justify-content-sm-center align-content-center border-bottom border-2 my-2 bg-dark text-light p-3 rounded-3">
-            <tr class="text-center">
-                <th>
-                    <strong>Member  Name</strong>
-                </th>
-                <th>
-                    <strong>Member Phone</strong>
-                </th>
-                <th>
-                    <strong>Member Mail</strong>
-                </th>
-                <th>
-                    <strong>Member Address</strong>
-                </th>
-                <th>
-                    <strong>Edit</strong>
-                </th>
-            </tr>
-        </thead>
-        @foreach (var item in Model)
-        {
-            <tbody class="justify-content-md-between justify-content-sm-center border-bottom border-2 my-2 bg-light p-2 rounded-3">
-                <tr>
-					<td class="text-center align-middle">@item.FirstName @item.LastName</td>
-					<td class="text-center align-middle">@item.PhoneNumber</td>
-					<td class="text-center align-middle">@item.Email</td>
-					<td class="text-center align-middle">@item.Address</td>
-					<td class="text-center align-middle">
+	<h1 class="text-center">Member Management</h1>
+	<div class="text-center mb-2 row">
+		<div class="col-12 d-flex justify-content-center align-items-center">
+			<a asp-area="Admins" asp-controller="Member" asp-action="Create" class="btn btn-outline-info">
+				<i class="bi bi-plus-circle"></i>
+				Add
+			</a>
+		</div>
+	</div>
+	<table id="example" class="table table-striped" style="width:100%">
+		<thead>
+			<tr>
+				<th>
+					<strong>Member  Name</strong>
+				</th>
+				<th>
+					<strong>Member Phone</strong>
+				</th>
+				<th>
+					<strong>Member Mail</strong>
+				</th>
+				<th>
+					<strong>Member Address</strong>
+				</th>
+				<th>
+					<strong>Edit</strong>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach (var item in Model)
+			{
+
+				<tr>
+					<td>@item.FirstName @item.LastName</td>
+					<td>@item.PhoneNumber</td>
+					<td>@item.Email</td>
+					<td>@item.Address</td>
+					<td>
 						<a asp-area="Admins" asp-controller="Member" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pen-fill" style="color: black;"></i></a>
 					</td>
 				</tr>
-            </tbody>
-        }
-    </table>
+
+			}
+		</tbody>
+	</table>
 </div>
