--- a/FPTBookWebClient/Areas/Admins/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Areas/Admins/Views/Shared/_Layout.cshtml
@@ -6,11 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewData["Title"] - FBTBook</title>
+	<link rel="icon" href="~/img/LOGO.jpg" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-		  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-	@*<link rel="icon" href="/img/THELIGHTTOY.png" />*@
+	<link href="https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+	@await RenderSectionAsync("Stylesheets", required: false)
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 		<section class="row">
 			<div class="col-lg-2 col-md-3 content-left pr-0">
 				<!-- Navbar -->
-				<nav class="navbar navbar-expand-md bg-light navbar-light">
+				<nav class="navbar navbar-expand-md bg-light navbar-light justify-content-center">
 					<!-- Toggle button -->
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebarMenu">
 						<span class="navbar-toggler-icon"></span>
@@ -27,7 +28,7 @@
 					<!-- Brand -->
 					
 					<a class="nav-link px-0 text-info" asp-area="Admins" asp-controller="Approve" asp-action="Index">
-						<h3 class="fw-bold">Admin</h3>
+						<h3 class="fw-bold">Administrator</h3>
 					</a>
 				</nav>
 				<!-- Navbar -->
@@ -60,6 +61,18 @@
 			</main>
 		</section>
 	</div>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap5.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$('#example').DataTable();
+		});
+	</script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 
