--- a/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
@@ -76,7 +76,7 @@
 <script>
 	$('#frmCreateBook').submit(function (e) {
 		e.preventDefault();
-		var files = $('#file')[0].files;
+		var files = $('#ImageFile')[0].files;
 		if (files.length > 0) {
 			$.ajax({
 				url: "https://localhost:7076/api/Books",
