Order information user

--- a/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
@@ -16,7 +16,7 @@
 		<span asp-validation-for="GenreDescription" class="text-danger"></span>
 	</div>
 	<div class="form-outline text-center">
-		<input type="submit" class="btn btn-info" asp-area="Owners" asp-controller="Genre" asp-action="Update" value="Update" />
+		<input type="submit" class="btn btn-info" value="Update" />
 		<a class="btn btn-info" asp-action="Index">Cancel</a>
 	</div>
 </form>
