--- a/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
+++ b/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
@@ -30,7 +30,7 @@
 						<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Change Password</a>
 					</li>
 					<li>
-						<a class="dropdown-item" href="/user/ordered">Order infomation</a>
+						<a class="dropdown-item" asp-controller="Order" asp-action="Index">Order infomation</a>
 					</li>
 					<div class="dropdown-divider"></div>
 					<li>
